--- a/waidh-fe/src/assets/html/loginForm.html
+++ b/waidh-fe/src/assets/html/loginForm.html
@@ -1,5 +1,5 @@
 <style>
-	.login-form-container {
+	#login-form-container {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -9,8 +9,12 @@
 		padding: 2rem;
 		justify-content: center;
 	}
-	.login-form-container > h1 {
+	#login-form-container > h1 {
 		text-align: center;
+	}
+	#login-form-container.fade {
+		filter: brightness(0);
+		transition: filter 750ms linear;
 	}
 	#signUpBtn {
 		padding-top: 0.5rem;
@@ -19,7 +23,7 @@
 		cursor: pointer;
 	}
 </style>
-<div class="login-form-container">
+<div id='login-form-container'>
 	<h1 class="title is-2">What am I doing here</h1>
 	<h2 class="title is-5">Sign in</h2>
 	<div class="field">
